# gitprompt

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  SECURITY.md  comprehensive_example.py  conftest.py  env.example  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
docs/: API_REFERENCE.md  CONFIGURATION.md  DEPLOYMENT.md  EXAMPLES.md  INDEX.md  README.md  USER_GUIDE.md
examples/: advanced_usage.py  basic_usage.py
src/gitprompt/: __init__.py  change_tracker.py  cli.py  config.py  constants.py  core.py  deployment.py  embeddings.py  exceptions.py  git_parser.py  interfaces.py  utils.py  vector_db.py  version.py
tests/: test_basic.py  test_change_tracker.py  test_cli.py  test_config.py  test_constants.py  test_core.py  test_deployment.py  test_embeddings.py  test_exceptions.py  test_git_parser.py  test_integration.py  test_interfaces.py  test_performance.py  test_utils.py  test_vector_db.py  test_version.py
