[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "gitprompt"
version = "1.0.0"
description = "A powerful Python library for indexing Git repositories and working with vector embeddings"
readme = "README.md"
license = "MIT"
authors = [
    {name = "GitPrompt Contributors", email = "contact@gitprompt.dev"}
]
maintainers = [
    {name = "GitPrompt Contributors", email = "contact@gitprompt.dev"}
]
keywords = [
    "git",
    "embeddings",
    "vector-database",
    "llm",
    "search",
    "indexing",
    "ai",
    "machine-learning"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Indexing",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Distributed Computing",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "click>=8.1.0",
    "gitpython>=3.1.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "toml>=0.10.0",
    "psutil>=5.9.0",
    "prometheus-client>=0.16.0",
    "redis>=4.5.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.11.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "chromadb>=0.4.0",
    "pinecone>=2.2.0",
    "weaviate-client>=3.25.0",
    "qdrant-client>=1.6.0",
    "openai>=1.0.0",
    "cohere>=4.0.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "tokenizers>=0.13.0",
    "tiktoken>=0.5.0",
    "anthropic>=0.3.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
    "py-spy>=0.3.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.0.0",
    "pytest-benchmark>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "safety>=2.3.0",
    "bandit>=1.7.0",
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
    "ipython>=8.0.0",
    "jupyter>=1.0.0",
    "notebook>=6.5.0",
    "memory-profiler>=0.60.0",
    "line-profiler>=4.0.0",
    "py-spy>=0.3.0"
]
chroma = [
    "chromadb>=0.4.0"
]
pinecone = [
    "pinecone>=2.2.0"
]
weaviate = [
    "weaviate-client>=3.25.0"
]
qdrant = [
    "qdrant-client>=1.6.0"
]
openai = [
    "openai>=1.0.0",
    "tiktoken>=0.5.0"
]
cohere = [
    "cohere>=4.0.0"
]
sentence-transformers = [
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "tokenizers>=0.13.0"
]
anthropic = [
    "anthropic>=0.3.0"
]
all = [
    "chromadb>=0.4.0",
    "pinecone>=2.2.0",
    "weaviate-client>=3.25.0",
    "qdrant-client>=1.6.0",
    "openai>=1.0.0",
    "cohere>=4.0.0",
    "sentence-transformers>=2.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "tokenizers>=0.13.0",
    "tiktoken>=0.5.0",
    "anthropic>=0.3.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/gitprompt"
Documentation = "https://github.com/yourusername/gitprompt/docs"
Repository = "https://github.com/yourusername/gitprompt.git"
"Bug Tracker" = "https://github.com/yourusername/gitprompt/issues"
Changelog = "https://github.com/yourusername/gitprompt/blob/main/CHANGELOG.md"
"Source Code" = "https://github.com/yourusername/gitprompt"

[project.scripts]
gitprompt = "gitprompt.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
ensure_newline_before_comments = true
known_first_party = ["gitprompt"]
known_third_party = [
    "aiohttp",
    "asyncio",
    "click",
    "chromadb",
    "cohere",
    "fastapi",
    "git",
    "numpy",
    "openai",
    "pandas",
    "pinecone",
    "pydantic",
    "pytest",
    "qdrant",
    "redis",
    "requests",
    "rich",
    "sentence_transformers",
    "sqlalchemy",
    "typer",
    "uvicorn",
    "weaviate"
]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
skip = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".env",
    "env",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
    ".tox",
    ".mypy_cache",
    ".ruff_cache"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
pretty = true
color_output = true
error_summary = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-vv",
    "--tb=short",
    "--durations=10",
    "--strict-markers",
    "--strict-config",
    "--cov=src/gitprompt",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "--asyncio-mode=auto"
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "performance: Performance tests",
    "cli: CLI tests",
    "mock: Tests that use mocks",
    "real_api: Tests that use real API calls"
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning"
]

[tool.coverage.run]
source = ["src/gitprompt"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/env/*",
    "*/.*",
    "*/migrations/*",
    "*/alembic/*",
    "*/conftest.py",
    "*/setup.py",
    "*/build/*",
    "*/dist/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod"
]

[tool.coverage.html]
directory = "htmlcov"
title = "GitPrompt Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    ".env",
    "env",
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".coverage",
    "htmlcov",
    ".tox",
    ".mypy_cache",
    ".ruff_cache"
]
per-file-ignores = [
    "__init__.py:F401",
    "tests/*:S101",
    "examples/*:S101"
]
max-complexity = 10
select = ["C", "E", "F", "W", "B", "B950"]
ignore = ["E203", "W503"]
show-source = true
statistics = true
count = true

[tool.bandit]
exclude_dirs = ["tests", "examples"]
skips = ["B101", "B601"]

[tool.safety]
output = "json"